Calling Mesh.clear_geometry results in a crash when the object has a Points to Volume geometry node #114946

Closed
opened 2023-11-16 01:34:25 +01:00 by Ryan Guy · 1 comment

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-14 20:16, hash: 5c04b477aa28
Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: 878f71061b8e
Broken: version: 3.6.5, branch: blender-v3.6-release, commit date: 2023-10-16 14:30, hash: cf1e1ed46b7e
Worked: n/a

Short description of error

I am using a Points to Volume geometry node on a mesh object. Calling Mesh.clear_geometry() in a script results in a crash.

import bpy
object = bpy.data.objects["Vertices"]
object.data.clear_geometry()

Crash log: points_to_volume_crash.crash.txt

ui_screenshot.jpg

Exact steps for others to reproduce the error

Blend file: points_to_volume_crash.blend

  1. Open the Blend file
  2. Run the script
    Result: Blender crashes.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-14 20:16, hash: `5c04b477aa28` Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: `878f71061b8e` Broken: version: 3.6.5, branch: blender-v3.6-release, commit date: 2023-10-16 14:30, hash: `cf1e1ed46b7e` Worked: n/a **Short description of error** I am using a Points to Volume geometry node on a mesh object. Calling Mesh.clear_geometry() in a script results in a crash. ```Py import bpy object = bpy.data.objects["Vertices"] object.data.clear_geometry() ``` Crash log: [points_to_volume_crash.crash.txt](/attachments/74e09078-2933-4681-ae0f-97e540f2e307) ![ui_screenshot.jpg](/attachments/6decc365-5c95-4246-990e-a3fbbaaeeafb) **Exact steps for others to reproduce the error** Blend file: [points_to_volume_crash.blend](/attachments/10820249-83d7-4e89-a8b2-f0820bad5eba) 1. Open the Blend file 2. Run the script Result: Blender crashes.
Ryan Guy added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-11-16 01:34:26 +01:00
Jesse Yurkovich added
Module
Nodes & Physics
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-16 08:26:20 +01:00
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Python API
labels 2023-11-16 19:00:34 +01:00
Member

Will raise priority since this is a crasher (and not a totally unlikely situation to run into)

Will raise priority since this is a crasher (and not a totally unlikely situation to run into)
Philipp Oeser added
Severity
High
and removed
Severity
Normal
labels 2024-02-12 15:21:39 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-03-02 21:26:50 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-02 21:40:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114946
No description provided.