Fix #114946: Mesh.clear_geometry should not clear required built-in attributes

Pull Request: https://projects.blender.org/blender/blender/pulls/119012